Added URL for the web-hosted app. See README.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 .vscode/settings.json
 bookme/bookme/sec.py
+bookme/bookme/__pycache__/sec.cpython-38.pyc
+bookme/bookme/__pycache__/settings.cpython-38.pyc
+bookme/bookme/__pycache__/settings.cpython-38.pyc
