--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 bookme/bookme/sec.py
 bookme/bookme/__pycache__/sec.cpython-38.pyc
 bookme/bookme/__pycache__/settings.cpython-38.pyc
-bookme/bookme/__pycache__/settings.cpython-38.pyc
+.gitignore
